[tool.poetry]
name = "realapp"
version = "0.1.0"
description = "some testing to understand the new way of sqlalchemy-ing"
authors = ["Oscar Arbelaez <oscar@arbelaez.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
